# haven

./: .env.example  .git-blame-ignore-revs  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  AGENT_HANDOFF.md  CLEANUP_SCRATCH.md  LICENSE.md  README.md  eslint.config.mjs  find-dead-vars.mjs  forge.config.js  haven.code-workspace  package-lock.json  package.json  repo-graph.dot  repo-structure.mmd  tsconfig.base.json  tsconfig.json  tsconfig.node.json  tsconfig.shared.json  tsconfig.web.json  vercel.json  vite.config.ts  vitest.config.ts  vitest.tier2.config.ts  webpack.main.config.js  webpack.preload.config.js  webpack.renderer.config.js  webpack.rules.js  webpack.shared.config.js
.github/workflows/: ci.yml  release-desktop.yml
.githud/: config.json
.zed/: debug.json  settings.json  typescript.json
Haven Design System/: README.md  SKILL.md  colors_and_type.css
Haven Design System/preview/: brand-logo.html  brand-mascot.html  brand-voice.html  colors-brand.html  colors-semantic.html  colors-surfaces.html  colors-text.html  component-badges.html  component-buttons.html  component-cards.html  component-channel-list.html  component-inputs.html  component-staff-context.html  spacing-radii.html  spacing-scale.html  spacing-shadows.html  type-body.html  type-display.html  type-family.html
Haven Design System/scraps/: sketch-2026-04-30T15-50-46-j3uh22.napkin
apps/mobile/: .env.example  App.tsx  README.md  TESTFLIGHT_READINESS.md  app.config.js  app.json  babel.config.js  capacitor.config.ts  eas.json  global.css  metro.config.js  nativewind-env.d.ts  package-lock.json  package.json  react-native.config.js  tailwind.config.js  tsconfig.json  uniwind-themes.generated.cjs  uniwind-types.d.ts  vite.config.ts
apps/tauri/: index.html  tsconfig.json  vite.config.ts
apps/tauri/haven-voice/: Cargo.toml  mint-token.mjs
apps/tauri/haven-voice/src/: audio_mixer.rs  db_meter.rs  main.rs  protocol.rs
apps/tauri/src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: lib.rs  main.rs  voice.rs
apps/web/: index.html  tsconfig.json  vite.config.ts
docs/: AGENTS.md  ARCHITECTURE.md  BACKLOG.md  PORTABLE_SHARED.md  PRINCIPLES.md  README.md  RELEASE_CADENCE.md  SOLID_BUILD_HANDOFF.md  SOLID_REBUILD.md  SOLID_SHIP_READINESS.md  SOLID_UNDERSTANDABILITY_AUDIT.md  auto-updates.md  backend-seam.md  collaborator-setup.md  future-optimizations.md  haven-workflow.md  messages-cleave-inventory.md  shared-core-audit.md  solid-migration-handoff.md  tauri-solid-rebuild.md  tauri-solid-roadmap.md  voice-architecture.md
docs/_archive/: HAVEN_CORE_HOOKS_AUDIT.md  MOBILE_NEXUS_DIRECT_REFACTOR_AUDIT.md  PLATFORM_INJECTION_CUTOVER_RULESET.md  README.md  future-optimizations.md  messages-cleave-inventory.md  repo-structure.mmd  shared-core-audit.md  solid-migration-handoff.md  tauri-solid-rebuild.md  tauri-solid-roadmap.md
docs/_outdated-historical-only/: repo-graph.dot  repo-structure.mmd
docs/architecture/: HAVEN_CORE.md  HAVEN_CORE_HOOKS_AUDIT.md  HAVEN_CORE_REALTIME_AUDIT.md  MOBILE_NEXUS_DIRECT_REFACTOR_AUDIT.md  NATIVE_VOICE.md  PLATFORM_INJECTION_CUTOVER_RULESET.md  REALTIME.md  SOLID_CLIENT_SHAPE.md  boundaries.md  context-menu-event-flow.md  direct-messaging.md  moderation-reports.md  nexus-framework.html  notifications-and-delivery.md  permissions-and-roles.md  renderer-entry-origin-parity.md  renderer-refactor-checklist.md  type-safety-phase-2.md
docs/dev/: app-assets.md
docs/internal/: README.md  document-catalog.md  voice-overhaul-requirements-pass.md
docs/learning/: reference-names-vs-keywords.md  reference-single-letter-names.md  scratch.js  tier-1-bedrock.html  tier-1-bedrock.md  tier-2-control-flow.html  tier-2-control-flow.md  tier-3-functions.html  tier-3-functions.md  tier-4-shaping-data.html  tier-4-shaping-data.md
docs/recovery/: haven-work-b104609.md
docs/releases/: README.md  desktop-v2.0.0.md  desktop-v2.0.1.md
docs/testing/: rls-and-hardening-runbook.md  test-suite-breakdown.md
docs/users/: README.md  web-and-mobile-install.md  web-install.md
scripts/test/: bootstrap-local-auth-users.mjs  generate-test-report.mjs  generate-test-signoff.mjs  resolve-supabase-local-env.mjs  run-db-suite.mjs  run-notification-dispatch-smoke.mjs  run-notification-route-policy-sim.mjs  run-supabase-sql-suite.mjs  run-vitest-with-local-env.mjs
services/supabase/: config.toml
src/: main.js  preload.js  renderer.tsx
src/components/: AccountSettingsModal.tsx  ChannelSettingsModal.tsx  ChatArea.tsx  CreateChannelModal.tsx  CreateServerModal.tsx  DirectMessageArea.tsx  (+20 more)
supabase/: config.toml
tooling/experiments/livekit-probe/: Cargo.toml  mint-token.mjs
tooling/experiments/livekit-probe/src/: main.rs
(+1036 files in other folders)
