[package]
name = "haven-tauri"
version = "0.1.0"
description = "Haven Tauri/Solid spike"
authors = ["redrix-dev"]
edition = "2021"

[lib]
name = "haven_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
