# De-risk probe (slice 0): proves the native LiveKit Rust stack (livekit +
# webrtc-sys/libwebrtc) BUILDS and CONNECTS on the target Linux box before we
# integrate it into the Tauri app. Throwaway — delete once slice 1 begins.
#
# `[workspace]` here makes this its own workspace root so it can't be absorbed
# by any parent Cargo workspace.
[workspace]

[package]
name = "livekit-probe"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# The native LiveKit SDK. Pulls webrtc-sys, which downloads a prebuilt
# libwebrtc on first build (needs network). If the TLS feature name below
# errors, the alternatives are: "native-tls", "rustls-tls-webpki-roots".
livekit = { version = "0.7", features = ["rustls-tls-native-roots"] }
tokio = { version = "1", features = ["full"] }
